--- a/brainasphere.html
+++ b/brainasphere.html
@@ -90,7 +90,7 @@
 <body>
 <!-- Sidebar -->
 <div class="sidebar">
-<a href="home.html">Home</a>
+<a href="index.html">Home</a>
 <a href="website.html">ExploraSphere</a>
 <a href="brainasphere.html">BrainaSphere</a>
 <a href="contact.html">Contact Us</a>
