--- a/newyork.html
+++ b/newyork.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla&amp;display=swap" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Oahu: The Gathering Place</title>
+<title>New York: ExploraSphere</title>
 <style>
         body {
             font-family: 'Karla', sans-serif;
