--- a/oahu.html
+++ b/oahu.html
@@ -63,5 +63,16 @@
 <button class="top-left-button">🏠︎</button>
 </a>
 <h1>Oahu: The Gathering Place</h1>
+<p>Oahu is a beautiful island with pristine beaches and crystal clear oceans. Visiting Oahu is a truly rejuvinating experience in the perfect temperature all year round. Oahu makes the perfect vacation place for anyone who likes water sports.</p>
+<p><strong>Day One: </strong>Your flight should land at around 1:00 in the afternoon. Check in to yours Disney Aulani Resort and spend the remainder of the day enjoying yourself at the pool or beach with a shaved ice. </p>
+<p><strong>Day Two: </strong>Wake up in the morning to a delicious breakfast and then head to your shark diving tour with North Shore Shark Adventures. Keep 45 minutes for driving time. When you arrive back, enjoy the waterslides for a bit, and then head to your spa appointment to relax. After that, have lunch at Mama Mia's and then try and have a crack at the Menehune Adventure Trail, a fun, high-tech scavenger hunt.</p>
+<p><strong>Day Three: </strong>Today, head to your surfing lesson in the morning, which lasts about 1.5 hours, and try to stand up! Later in the day, head to Rainbow Reef to to see the fishes. Then, go to the beach where you can rent a stand-up paddle board and try it out. </p>
+<a href="https://www.sparkyssurfschool.com/">Surf School</a>
+<p><strong>Day Four: </strong>Wake up extra early and have some cereal for breakfast(the restraunt won't be open). Be ready to leave by 6:00. Visit Hanauma Bay State Park to go on your dolphin snorkel tour, and request transportation beforehand. When you come back, check the Daily 'Iwa on the Disney Aulani app to see shows and experiences you can enjoy. Later, treat yourself to dinner at Monkeypod Kitchen by Merriman./</p>
+<p><strong>Day Five: </strong>In the morning, catch your flight out of Oahu.</p>
+
 </body>
+<footer>
+    <p>©2025 ExploraSphere. Copying this page is illegal</p>
+</footer>
 </html>
