--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 <p>The ultimate hub for travel itineraries and info</p>
 <h2><u>ExploraSphere</u></h2>
 <p>ExploraSphere has a vast collection of travel itineraries for places all over the world. Each one of these recommendations and itineraries has been used in real life and tested to have the perfect balance between relaxation and adventure. At ExploraSphere, we take our travel seriously, and we want to make sure that your travels make memories that should stay with you forever. We spent over a decade, and thousands of dollars making sure that each of these itineraries is perfected. Traveling should mean adventure and discovery, and take you away from the stress of everyday life, and ExploraSphere helps you do that.</p>
+<video width="320" height="240" controls autoplay>
+    <source src="Images/20250106_1848_Global Adventure Journey_simple_compose_01jgzak11xfkgamgn9gd71erjm.mp4" type="video/mp4">
+  </video>
 <h2><u>GlobaSphere</u></h2>
 <p>GlobaSphere has a remarkable collection of information, all relevant to the itineraries we made. We believe that travelling without knowing about where you are going is pointless, and GlobaSphere gives you information in a fun, easy to digest way about the places you'll go, or even places you are just curious about. We spend months carefully developing these bits of information and formatting them in a way that you will find it engaging and interesting. Even a small glipse of information on where you are going means you trip will be so much better. Your face lights up with joy everytime you see something you've read about in real life, as you see something you thought could only exist in a utopia, right before your eyes, and GlobaSphere does that for you.</p>
 <h2>Found Our Website Useful?</h2>
