--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,7 @@
 <a href="website.html">ExploraSphere</a>
 <a href="brainasphere.html">BrainaSphere</a>
 <a href="contact.html">Contact Us</a>
+<a href="donate.html">Donate!</a>
 </div>
 <div class="main-content">
 <h1>Have any questions or recommendations?</h1>
