--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <a href="website.html">ExploraSphere</a>
 <a href="brainasphere.html">BrainaSphere</a>
 <a href="contact.html">Contact Us</a>
+<a href="donate.html">Donate!</a>
 
 </div>
 <div class="main-content">
