--- a/website.html
+++ b/website.html
@@ -136,6 +136,7 @@
 <a href="website.html">ExploraSphere</a>
 <a href="brainasphere.html">BrainaSphere</a>
 <a href="contact.html">Contact Us</a>
+<a href="donate.html">Donate!</a>
 </div>
 <!-- Main Content -->
 <div class="main-content">
