--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
 <h2>Donate some money to help our website improve and get more itineraries!</h2>
 
 <p>5% of all donations will go to the Environmental Defense Fund which is an organization meant to stop climate change.</p>
-<a href="https://donate.stripe.com/9AQ01obh05JB2vCfYY">Click here to donate!</a>
+<a href="https://pay.worldasphere.org">Click here to donate!</a>
     
 <p>The remainder of the money will be used to help fund the travel that helps us test and tinker with our itineraries to make sure that they are perfected.</p>
 <h2>Help us fight climate change and donate today!</h2>
