--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <h2><u>GlobaSphere</u></h2>
 <p>GlobaSphere has a remarkable collection of information, all relevant to the itineraries we made. We believe that travelling without knowing about where you are going is pointless, and GlobaSphere gives you information in a fun, easy to digest way about the places you'll go, or even places you are just curious about. We spend months carefully developing these bits of information and formatting them in a way that you will find it engaging and interesting. Even a small glipse of information on where you are going means you trip will be so much better. Your face lights up with joy everytime you see something you've read about in real life, as you see something you thought could only exist in a utopia, right before your eyes, and GlobaSphere does that for you.</p>
 <h2>Found Our Website Useful?</h2>
-<a href="https://pay.worldasphere.org">Click Here to Donate!</a>
+<a href="https://donate.stripe.com/9AQ01obh05JB2vCfYY">Click Here to Donate!</a>
 <p>Help us build and improve our itineraries.</p>
 </div>
 <footer>
