--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <p>The ultimate hub for travel itineraries and info</p>
 <h2><u>ExploraSphere</u></h2>
 <p>ExploraSphere has a vast collection of travel itineraries for places all over the world. Each one of these recommendations and itineraries has been used in real life and tested to have the perfect balance between relaxation and adventure. At ExploraSphere, we take our travel seriously, and we want to make sure that your travels make memories that should stay with you forever. We spent over a decade, and thousands of dollars making sure that each of these itineraries is perfected. Traveling should mean adventure and discovery, and take you away from the stress of everyday life, and ExploraSphere helps you do that.</p>
-<video width="320" height="240" controls loop>
+<video width="320" height="240" controls loop autoplay>
     <source src="Images/20250106_1848_Global Adventure Journey_simple_compose_01jgzak11xfkgamgn9gd71erjm.mp4" type="video/mp4">
   </video>
 <h2><u>GlobaSphere</u></h2>
