--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla&amp;display=swap" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta property="og:image" content="Images/worldasphere2.jpg">
 <title>WorldaSphere Home</title>
 <style>
         body {
@@ -84,6 +85,7 @@
     </style>
 </head>
 <body>
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11549364119">
 </script>
