--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11549364119"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11549364119');
+</script>
 <body>
 <div class="sidebar">
 <a href="index.html">Home</a>
