--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         body {
             font-family: 'Karla', sans-serif;
             background-color: rgb(229, 229, 229);
+             left_margin: 300px;
+             right_margin: 300px;
         }
         .logo {
         display: block;
