--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -14,8 +15,7 @@
         body {
             font-family: 'Karla', sans-serif;
             background-color: rgb(229, 229, 229);
-             left_margin: 300px;
-             right_margin: 300px;
+             
         }
         .logo {
         display: block;
@@ -56,15 +56,21 @@
             text-align: center;
             margin: 20px 0;
             font-size: 75px;
+             margin-left: 300px;
+             margin-right: 300px;
         }
         h2, h3 {
             text-align: center;
             margin: 20px 0;
             font-size: 25px;
             margin-top:0px;
+             margin-left: 300px;
+             margin-right: 300px;
         }
         p {
             font-size: 20px;
+          margin-left: 300px;
+             margin-right: 300px;
         }
         footer {
             background-color: #333;
