--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         body {
             font-family: 'Karla', sans-serif;
             background-color: rgb(229, 229, 229);
+             line-height: 1.15em
              
         }
         .logo {
