--- a/donate.html
+++ b/donate.html
@@ -94,7 +94,7 @@
 </script>
 <body>
 <div class="sidebar">
-<a href="home.html">Home</a>
+<a href="index.html">Home</a>
 <a href="website.html">ExploraSphere</a>
 <a href="brainasphere.html">BrainaSphere</a>
 <a href="contact.html">Contact Us</a>
