--- a/website.html
+++ b/website.html
@@ -184,6 +184,8 @@
 <a href="venice.html">
 <card class="card" style="background-image: url('Images/vn.jpg')">Venice: The Floating City</card>
 </a>
+<a href="japan.html">
+<card class="card" style="background-image: url('Images/jpn.jpg')">Japan: The Land of the Setting Sun</card>
 <h2>There are more places coming!</h2>
 </div>
 <!-- Footer -->
