--- a/japan.html
+++ b/japan.html
@@ -9,7 +9,7 @@
 <style>
         body {
             font-family: 'Karla', sans-serif;
-            background-image: url('Images/Japan.png'); /* Path to your background image */
+            background-image: url('Images/nihon.png'); /* Path to your background image */
             background-size: 100%;
             background-repeat: no-repeat;
             background-position: top; /* Centers the image */
