--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             font-size: 20px;
           margin-left: 300px;
              margin-right: 300px;
+             line-height: 1.1;
         }
         footer {
             background-color: #333;
