--- a/japan.html
+++ b/japan.html
@@ -77,7 +77,7 @@
 <a href="website.html">
 <button class="top-left-button">🏠︎</button>
 </a>
-<h1>Japan: The Land of the Setting Sun</h1>
+<h1>Japan: The Land of the Rising Sun</h1>
 <p>Japan is an extraordinary place with a wonderful culture. From its bustling cities to suburban towns, Japan is yet to disappoint. </p>
 <p><strong>Day One: </strong>Catch your flight to Tokyo Narita Airport at 11:00 AM</p>
 <p><strong>Day Two: </strong>When your flight lands, get a JR Railpass to get around. Then, get a Suica or IC card for easy purchases. After that, head to train station and get on a train to Tokyo Station and walk from there to Karaksa Hotel, Tokyo Station. Then, head to the Tokyo Skytree via the Marunochi line for some great views of the city. Keep some time to browse the shops on the way there. Then, head back and go to bed. For dinner, try something you find at the markets. For vegetarians, I HIGHLY recommend bringing instant noodles or snacks from home.</p>
