--- a/website.html
+++ b/website.html
@@ -185,7 +185,7 @@
 <card class="card" style="background-image: url('Images/vn.jpg')">Venice: The Floating City</card>
 </a>
 <a href="japan.html">
-<card class="card" style="background-image: url('Images/jpn.jpeg')">Japan: The Land of the Setting Sun</card>
+<card class="card" style="background-image: url('Images/jpn.jpeg')">Japan: The Land of the Rising Sun</card>
 <h2>There are more places coming!</h2>
 </div>
 <!-- Footer -->
