--- a/ny-info.html
+++ b/ny-info.html
@@ -95,16 +95,9 @@
 <a href="donate.html">Donate!</a>
 </div>
 <div class="main-content">
-<h1>Have any questions or recommendations?</h1>
-<h2>Contact Us! We would love suggestions to improve our site.</h2>
-<p><strong>Email: </strong>hen.doolittle@gmail.com</p>
-<p><strong>Phone: </strong>+1(650)-521-3263 --- Calls only accepted at the following hours: </p>
-<p>Mon: 5:30-7:00 PM</p>
-<p>Tue-Thu: 4:00-7:00 PM</p>
-<p>Fri: 4:00-6:00 PM</p>
-<p>Sat-Sun: 11:00-5:00</p>
-<h2>Thank you for your feedback!</h2>
-<p>We are always looking to improve.</p>
+<h1>New York</h1>
+<h2>Discover the story behind the state that shaped a nation. From iconic landmarks to rich cultural roots, learning about New York means exploring innovation, diversity, and history in action. Dive in—New York has a lot to teach.</h2>
+<embed src="path/to/your/document.pdf" type="application/pdf" width="800px" height="600px" />
 </div>
 <footer>
 <p>© 2025 WorldaSphere. All rights reserved.</p>
