--- a/ny-info.html
+++ b/ny-info.html
@@ -97,7 +97,7 @@
 <div class="main-content">
 <h1>New York</h1>
 <h2>Discover the story behind the state that shaped a nation. From iconic landmarks to rich cultural roots, learning about New York means exploring innovation, diversity, and history in action. Dive in—New York has a lot to teach.</h2>
-<h2>For citations, head to </h2><a=href"https://docs.google.com/document/d/1WG2sn9a0hDCpll4WLVpqeSiZUuve3QeGL096tjV8TKo/edit?usp=sharing">https://docs.google.com/document/d/1WG2sn9a0hDCpll4WLVpqeSiZUuve3QeGL096tjV8TKo/edit?usp=sharing</a>
+<h2>For citations, head to </h2><a href="https://docs.google.com/document/d/1WG2sn9a0hDCpll4WLVpqeSiZUuve3QeGL096tjV8TKo/edit?usp=sharing">https://docs.google.com/document/d/1WG2sn9a0hDCpll4WLVpqeSiZUuve3QeGL096tjV8TKo/edit?usp=sharing</a>
 <embed src="path/to/your/document.pdf" type="application/pdf" width="800px" height="600px" />
 </div>
 <footer>
