--- a/ny-info.html
+++ b/ny-info.html
@@ -97,7 +97,7 @@
 <div class="main-content">
 <h1>New York</h1>
 <h2>Discover the story behind the state that shaped a nation. From iconic landmarks to rich cultural roots, learning about New York means exploring innovation, diversity, and history in action. Dive in—New York has a lot to teach.</h2>
-<embed src="NY NEW.key" type="application/pdf" width="800px" height="600px" />
+<embed src="New York_1.pdf" type="application/pdf" width="1000px" height="600px" />
 </div>
 <footer>
 <p>© 2025 WorldaSphere. All rights reserved.</p>
