--- a/ny-info.html
+++ b/ny-info.html
@@ -26,6 +26,31 @@
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for effect */
             
         }
+             .card {
+
+    border-radius: 25px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    background-size: cover; /* Ensures the image covers the card area */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent tiling */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-size: 50px;
+    text-decoration: none;
+    color:white;
+    margin-bottom: 30px;
+    margin-top: 40px;
+    justify-content: center;
+;
+}
+
+.card:hover {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+    transform: translateY(-5px);
+}
+
         
 
         .sidebar a {
