--- a/ny-info.html
+++ b/ny-info.html
@@ -112,6 +112,9 @@
   gtag('config', 'AW-11549364119');
 </script>
 <body>
+<a href="ny-info.html">
+<card class="card" style="background-image: url('Images/oahu.jpg')">New York</card>
+</a>
 <div class="sidebar">
 <a href="index.html">Home</a>
 <a href="website.html">ExploraSphere</a>
