--- a/brainasphere.html
+++ b/brainasphere.html
@@ -155,7 +155,7 @@
 <h2>Your guide to the world</h2>
 <!-- Buttons for Locations -->
 <a href="ny-info.html">
-<card class="card" style="background-image: url('Images/ak2.jpeg')">New York</card>
+<card class="card" style="background-image: url('Images/nypic.jpeg')">New York</card>
 </a>
 
 <h2>There are more places coming!</h2>
