--- a/alaska.html
+++ b/alaska.html
@@ -8,6 +8,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Alaska: ExploraSphere</title>
+<link rel="icon" type="image/png" href="Images/worldaspherefavicon.png">
 <style>
         body {
             font-family: 'Karla', sans-serif;
