--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta property="og:image" content="Images\WorldaSphere2-removebg-preview.png">
 <title>WorldaSphere Home</title>
+<link rel="icon" type="image/png" href="Images/worldaspherefavicon.png">
 <style>
         body {
             font-family: 'Karla', sans-serif;
