--- a/india.html
+++ b/india.html
@@ -7,7 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Karla&amp;display=swap" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Alaska: ExploraSphere</title>
+<title>India: ExploraSphere</title>
+<link rel="icon" type="image/png" href="Images/worldaspherefavicon.png">   
 <style>
         body {
             font-family: 'Karla', sans-serif;
