--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <p>Help us build and improve our itineraries.</p>
 </div>
 <footer>
-<p>© 2025 WorldaSphere. All rights reserved.</p>
+<p>© 2025 WorldaSphere. All rights reserved. This site was developed by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
