--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 <p>We are always looking to improve.</p>
 </div>
 <footer>
-<p>© 2025 WorldaSphere. All rights reserved.</p>
+<p>© 2025 WorldaSphere. All rights reserved. This site was made by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
