--- a/donate.html
+++ b/donate.html
@@ -111,7 +111,7 @@
 <h2>Help the world have better vacations and donate today!</h2>
 </div>
 <footer>
-<p>© 2025 WorldaSphere. All rights reserved.</p>
+<p>© 2025 WorldaSphere. All rights reserved. This site was made by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
