--- a/iceland.html
+++ b/iceland.html
@@ -99,7 +99,7 @@
 <p><strong>Day Seven: </strong>Keep 30 minutes for driving to board your 9:30 Hauganes Whale Watching Tour, in which you get to see some rare whales and fish in the Greenland Sea. Drive back to Reykjavil and head to Bifrost Hotel for food. Check in to Hotel Alda. </p>
 <p><strong>Day Six: </strong>Drive for 40 mins to Blue Lagoon, and relax with a mud mask and a slushie in the geothermally heated, esteemed lagoon. After that, head out of Iceland, back home. </p>
 <footer>
-<p>This site was developed by Aanya Prakash. ©2025 ExploraSphere</p>
+<p>This site was developed by Aanya Prakash. ©2025 ExploraSphere. This site was made by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
