--- a/india.html
+++ b/india.html
@@ -104,7 +104,7 @@
 <p><strong>Day Eight: </strong>Start with a 4-hour food tour to explore the different tastes in the Indian cuisine. Then, leave the city on a taxi.</p>
 <a href="https://www.tripadvisor.com/AttractionProductReview-g304551-d13969525-Chandni_Chowk_Delhi_Food_Tour_with_15_Tastings-New_Delhi_National_Capital_Territor.html">This is the food tour</a>
 <footer>
-<p>©2025 ExploraSphere. Copying this page is illegal</p>
+<p>©2025 ExploraSphere. Copying this page is illegal. This site was made by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
