--- a/ny-info.html
+++ b/ny-info.html
@@ -126,7 +126,7 @@
 <embed src="New York_1.pdf" type="application/pdf" width="1000px" height="600px" />
 </div>
 <footer>
-<p>© 2025 WorldaSphere. All rights reserved.</p>
+<p>© 2025 WorldaSphere. All rights reserved. This site was made by Aanya Prakash.</p>
 </footer>
 </body>
 </html>
