--- a/oahu.html
+++ b/oahu.html
@@ -85,6 +85,6 @@
 
 </body>
 <footer>
-    <p>©2025 ExploraSphere. Copying this page is illegal</p>
+    <p>©2025 ExploraSphere. Copying this page is illegal. This site was made by Aanya Prakash.</p>
 </footer>
 </html>
