--- a/paris.html
+++ b/paris.html
@@ -86,6 +86,6 @@
 <p><strong>Day Five: </strong>In the morning, head to Shakespeare and Company, a famous bookstore in Paris before heading out of the city.</p>
 </body>
 <footer>
-    <p>©2025 ExploraSphere. Copying this page is illegal</p>
+    <p>©2025 ExploraSphere. Copying this page is illegal. This site was made by Aanya Prakash.</p>
 </footer>
 </html>
