--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta property="og:image" content="Images\WorldaSphere2-removebg-preview.png">
-<title>WorldaSphere Home</title>
+<title>WorldaSphere</title>
 <link rel="icon" type="image/png" href="Images/worldaspherefavicon.png">
 <style>
         body {
